style(content-scroller): tries a fixed spacing

--- a/assets/scss/components/_content-scroller.scss
+++ b/assets/scss/components/_content-scroller.scss
@@ -64,7 +64,7 @@
 }
 
 .content-scroller__block-space {
-  // padding-top: var(--content-scroller-spacing);
+  padding-top: var(--content-scroller-spacing);
 
   // TODO make sure the first padding is added somewhere else statically. and the spacing between the items is calculated from the height or take a fixed spacing like
   // the example site.
